# Cocoa-Engine

./: .gitignore  CMakeLists.txt  README.md  setup.bat  vcpkg.json
.github/workflows/: ci-build-test.yml
Assets/Metadata/: textures.json
Cocoa/: CMakeLists.txt
Cocoa.Tests/: CMakeLists.txt
Cocoa.Tests/include/Stubs/Graphics/: StubGraphicsDevice.hpp  StubShader.hpp
Cocoa.Tests/src/Assets/: AssetManagerTests.cpp  FilesystemAssetSourceTests.cpp  JsonDatabaseTests.cpp  ResourceLoaderTests.cpp
Cocoa.Tests/src/Chronos/: FrameClockTests.cpp
Cocoa.Tests/src/Graphics/: MaterialManagerTests.cpp  ShaderManagerTests.cpp  TextureSpecTests.cpp
Cocoa.Tests/src/Math/: Matrix2fTests.cpp  Matrix3fTests.cpp  Matrix4fTests.cpp  Vector2fTests.cpp  Vector3fTests.cpp  Vector4fTests.cpp
Cocoa.Tests/src/Scenes/: SceneManagerTests.cpp
Cocoa.Tests/src/Stubs/Graphics/: StubGraphicsDevice.cpp  StubShader.cpp
Cocoa.Tests/src/TestData/Metadata/: badtextures.json  shaders.json  textures.json
Cocoa/include/Assets/: Asset.hpp  AssetDatabase.hpp  AssetLoader.hpp  AssetManager.hpp  AssetPathProvider.hpp  IPathProvider.hpp  Image.hpp  ImageLoader.hpp  JsonAssetDatabase.hpp  ResourceLoader.hpp
Cocoa/include/Chronos/: FrameClock.hpp
Cocoa/include/Core/: Application.hpp  Color.hpp
Cocoa/include/Graphics/: GraphicsDevice.hpp  IGraphicsDevice.hpp  Material.hpp  MaterialManager.hpp  Renderer2D.hpp  Shader.hpp  (+1 more)
Sandbox/: CMakeLists.txt
Sandbox/include/: GameApplication.hpp
Sandbox/src/: GameApplication.cpp  Main.cpp
Vexxus/: CMakeLists.txt
Vexxus/include/: GameApplication.hpp
(+69 files in other folders)
